--- a/ocmoni6_2/html/index.html
+++ b/ocmoni6_2/html/index.html
@@ -138,7 +138,7 @@
                     type="checkbox"> <label for="passengerTypeCode06">飞行卡</label>
                 <label class="marginR5 title">区域</label>
                 <input type="text" id="geoSpecLoc1" v-model ="formData.geoSpecLoc1" mode="upper" maxlength="3"  class="common_input" style="width: 100px">
-                <span class="marginLR5"> <i class="glyphicon glyphicon-sort ts90 myhand" title="切换区域" v-on:click="switchGeoLocValue"></i> </span>
+                <span class="marginLR5"> <i class="glyphicon glyphicon-sort ts90 myhand text-success" title="切换区域" v-on:click="switchGeoLocValue"></i> </span>
                 <input type="text" id="geoSpecLoc2" v-model ="formData.geoSpecLoc2" mode="upper" maxlength="3"  class="common_input" style="width: 100px">
             </div>
             <!--query row3 end-->
