--- a/ocmoni6_2/html/index.html
+++ b/ocmoni6_2/html/index.html
@@ -167,7 +167,7 @@
 
     <div class="allInfo_descr" v-show ="pageBar.isQueryDB">
        <input type="checkbox" id ="queryDBFlag" v-model="queryDBFlag" />
-       <label for="queryDBFlag">共查询出<span class="red">{{pageBar.recordCount}}</span>条记录，针对全部记录排序?[{{dealPageOrderFlag}}]</label>
+       <label for="queryDBFlag">共查询出<span class="red">{{pageBar.recordCount}}</span>条记录，针对全部记录排序?</label>
     </div>
 
 
