--- a/ocmoni6_2/html/index.html
+++ b/ocmoni6_2/html/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>s7查询页面</title>
-    <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="../styles/css/jquery_ui.datepicker-modify.css"/>
     <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
     <link rel="stylesheet" href="../styles/css/common.css">
@@ -402,16 +402,15 @@
     
 </script>
 <!--<script type="text/javascript" src="https://cdn.jsdelivr.net/lodash/4.16.1/lodash.min.js"></script>-->
-<script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
-<script type="text/javascript" src ="../../bower_components/is-loading/jquery.isloading.js"></script>
-<script type="text/javascript" src="../../bower_components/headroom.js/dist/jQuery.headroom.js"></script>
+<script type="text/javascript" src="../lib/jquery.js"></script>
+<script type="text/javascript" src ="../lib/jquery.isloading.js"></script>
 <script type="text/javascript" src="../lib/jq-datepicker/jquery_ui.js"></script>
 <script type="text/javascript" src="../lib/jq-datepicker/jquery_ui.datepicker-zh-CN.js"></script>
 <script type="text/javascript" src="../lib/jq-timepicker/jquery-timepicker-addon.js"></script>
-<script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
 <!--<script type="text/javascript" src="../../bower_components/underscore/underscore.js"></script>-->
-<script type="text/javascript" src="../../bower_components/lodash/lodash.js"></script>
-<script type="text/javascript" src="../../bower_components/vue/dist/vue.js"></script>
+<script type="text/javascript" src="../lib/lodash.js"></script>
+<script type="text/javascript" src="../lib/vue.js"></script>
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
