--- a/ocmoni6_2/html/index.html
+++ b/ocmoni6_2/html/index.html
@@ -359,50 +359,49 @@
         </table>
     </div>
 
-     <!-- spilt page bar star -->
-    <nav class ="pull-right" v-if="records7List.length>0">
-        <ul class="pagination">
-            <li>  <a href="javascript:void(0)" v-on:click ="toPage(1)">首页</a></li>
-            <li>
-                <a href="javascript:void(0)" aria-label="Previous" v-on:click ="toPerviousPage">上一页</a>
-            </li>
-            <li v-for="l in pageBar.pgArr"    v-bind:class="{ 'active': pageBar.curPage==l}" >
-                <a href="javascript:void(0)"  v-on:click="toPage(l)">{{l}}</a>
-            </li>
-            <li v-if ="pageBar.pageCount>5&&(pageBar.curPage+3) <=pageBar.pageCount"><span>...</span></li>
-            <li>
-                <a href="javascript:void(0)" aria-label="Next" v-on:click ="toNextPage">下一页</a>
-            </li>
-            <li> <a href="javascript:void(0)" v-on:click ="toPage(pageBar.pageCount)">末页</a></li>
-        </ul>
-        <div class="page-desc">
-            <span class="marginRight10">共<span class ="marginRL2">{{pageBar.pageCount}}</span>页</span>
-            <span class ="">当前第</span>
-            <input type="text"  id ="pageOkInput" class ="common_input"  style="width: 30px"  value ="{{pageBar.curPage}}" >
-            <span class="marginRight5 ">页</span>
-            <span>显示
-                <select v-model ="pageBar.pageSize" style="width: 50px"> 
-                    <option value="5">5条</option>
-                    <option value="10">10条</option>
-                    <option value="10">15条</option>
-                    <option value="20">20条</option>
-                    <option value="30">30条</option>
-                    <option value="50">50条</option>
-                </select>
-            </span>
-            <span class="page-ok" v-on:click ="pageConfirm">确定</span>
-        </div>
-    </nav>
+    <!-- spilt page bar star -->
+    <div class="clearfix">
+        <nav class ="pull-right" v-if="records7List.length>0">
+            <ul class="pagination">
+                <li>  <a href="javascript:void(0)" v-on:click ="toPage(1)">首页</a></li>
+                <li>
+                    <a href="javascript:void(0)" aria-label="Previous" v-on:click ="toPerviousPage">上一页</a>
+                </li>
+                <li v-for="l in pageBar.pgArr"    v-bind:class="{ 'active': pageBar.curPage==l}" >
+                    <a href="javascript:void(0)"  v-on:click="toPage(l)">{{l}}</a>
+                </li>
+                <li v-if ="pageBar.pageCount>5&&(pageBar.curPage+3) <=pageBar.pageCount"><span>...</span></li>
+                <li>
+                    <a href="javascript:void(0)" aria-label="Next" v-on:click ="toNextPage">下一页</a>
+                </li>
+                <li> <a href="javascript:void(0)" v-on:click ="toPage(pageBar.pageCount)">末页</a></li>
+            </ul>
+            <div class="page-desc">
+                <span class="marginRight10">共<span class ="marginRL2">{{pageBar.pageCount}}</span>页</span>
+                <span class ="">当前第</span>
+                <input type="text"  id ="pageOkInput" class ="common_input"  style="width: 30px"  value ="{{pageBar.curPage}}" >
+                <span class="marginRight5 ">页</span>
+                <span>显示
+                    <select v-model ="pageBar.pageSize" style="width: 50px"> 
+                        <option value="5">5条</option>
+                        <option value="10">10条</option>
+                        <option value="10">15条</option>
+                        <option value="20">20条</option>
+                        <option value="30">30条</option>
+                        <option value="50">50条</option>
+                    </select>
+                </span>
+                <span class="page-ok" v-on:click ="pageConfirm">确定</span>
+            </div>
+        </nav>
+    </div>
     <!-- spilt page bar end -->
-
-
-    <pre>
+     <pre>
         {{formData | json}}
     </pre>
-    
-
-
 </div>
+
+
 
 
 <!--<script type="text/javascript" src="https://cdn.jsdelivr.net/lodash/4.16.1/lodash.min.js"></script>-->
