--- a/ocmoni6_2/html/index.html
+++ b/ocmoni6_2/html/index.html
@@ -396,9 +396,9 @@
         </nav>
     </div>
     <!-- spilt page bar end -->
-     <pre>
+     <!--<pre>
         {{formData | json}}
-    </pre>
+    </pre>-->
 </div>
 
 
