--- a/ocmoni6_3/html/index.html
+++ b/ocmoni6_3/html/index.html
@@ -165,7 +165,7 @@
 
 <div class="container-fluid main_content" id="main_content"  >
 
-    <div class="allInfo_descr" v-show ="pageBar.isQueryDB">
+    <div class="pageSum_desc" v-show ="pageBar.isQueryDB">
        <input type="checkbox" id ="queryDBFlag" v-model="queryDBFlag" />
        <label for="queryDBFlag">共查询出<span class="red">{{pageBar.recordCount}}</span>条记录，针对全部记录排序?</label>
     </div>
