--- a/ocmoni6_3/html/index.html
+++ b/ocmoni6_3/html/index.html
@@ -382,7 +382,7 @@
                 <input type="text"  id ="pageOkInput" class ="common_input"  style="width: 30px"  value ="{{pageBar.curPage}}" >
                 <span class="marginRight5 ">页</span>
                 <span>显示
-                    <select v-model ="pageBar.pageSize" style="width: 50px"> 
+                    <select class="pagesize" v-model ="pageBar.pageSize">
                         <option value="5">5条</option>
                         <option value="10">10条</option>
                         <option value="10">15条</option>
