--- a/www.qiankunta.com/index.html
+++ b/www.qiankunta.com/index.html
@@ -31,13 +31,13 @@
 <div class="home_page">
     <section class="home_intro">
         <div id="myCarousel" class="carousel slide">
-            <!-- 轮播（Carousel）指标
+            <!-- 轮播（Carousel）指标 -->
             <ol class="carousel-indicators onecarousel">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
             </ol>
-            -->
+
             <!-- 轮播（Carousel）项目 -->
             <div class="carousel-inner">
                 <div class="item active">
@@ -58,8 +58,11 @@
             </div>
         </div>
     </section>
+
+
     <section class="container home_dev">
         <p class="dve_title"><span>开发内容 Development</span></p>
+
         <ul class="home_h5 col-md-3 col-sm-3 col-lg-3">
             <li><a href="javascript:void(0)">HTML5</a></li>
             <li><a href="javascript:void(0)">网页游戏</a></li>
@@ -204,7 +207,9 @@
 
 </div>
 <div style="position:fixed;z-index:9999;right:20px;bottom:90px;">
-    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3133009053&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:3133009053:53" alt="" title=""></a>
+    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3133009053&site=qq&menu=yes">
+        <img border="0" src="http://wpa.qq.com/pa?p=2:3133009053:53" alt="" title="">
+    </a>
 </div>
 </body>
 <script type="text/javascript">
