--- a/www.qiankunta.com2/index.html
+++ b/www.qiankunta.com2/index.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta content="乾坤塔－www.qiankunta.com技术合作伙伴|方案咨询|ios开发|Android开发|H5开发|微信公众号开发|智能社区|智慧校园|视频" name="Keywords">
+    <meta content="乾坤塔－www.qiankunta.com技术合作伙伴|方案咨询|ios开发|Android开发|H5开发|微信公众号开发|智能社区|智慧校园|视频"
+          name="Description">
+    <meta name="baidu-site-verification" content="B6qQLlzb4y" />
+    <meta property="qc:admins" content="1461364427634170563757" />
+    <meta property="wb:webmaster" content="5228654728a81639" />
+    <title>乾坤塔</title>
+    <link href="./public/fav.ico" rel="shortcut icon">
+    <link rel="stylesheet" href="./public/lib/bootstrap/css/bootstrap.css"/>
+
     <title></title>
 </head>
 <body>
 
+<header class="navbar navbar-static-top home_header">
+    <div class="container pt8 pb8">
+        <img alt="Brand" src="./public/style/images/home_logo.png" class="home_logo">
+        <span class="ml8">专业的互联网技术服务商</span>
+    </div>
+</header>
+
+
+
+<script type="text/javascript" src="./public/lib/jquery/jquery.js"></script>
+<script type="text/javascript" src="./public/lib/bootstrap/js/bootstrap.js"></script>
+<script type="text/javascript" src="./public/js/index.js"></script>
 </body>
 </html>
